--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,53 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color:  rgb(214, 214, 214);
+    margin-top: 100px;
+}
+
+.navbar-brand{
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.navbar{
+    background-color: darkorange;
+    border-bottom: 0.5px solid rgb(138, 82, 13);
+    padding: 15px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+
+
+.navbar-dark .navbar-brand {
+    color: white;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: rgb(0, 0, 0);
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon{
+    width: 5rem;
+    height: 5rem;
+}
+
+.carousel-control-next:focus, 
+.carousel-control-next:hover, 
+.carousel-control-prev:focus, 
+.carousel-control-prev:hover {
+    background-color: darkorange;
+    text-decoration: none;
+    outline: 0;
+    opacity: .7;
+}
+
+.underline{
+    display: inline-block;
+    padding-bottom: 8px;
+    border-bottom: 3px solid darkorange;
+}
