--- a/src/app/matches/matches.component.css
+++ b/src/app/matches/matches.component.css
@@ -6,7 +6,7 @@ th {
     padding: 15px; 
  }
  tr{
-    border-bottom: 0.5px solid black;
+    border-bottom: 0.5px solid rgb(138, 82, 13);
 }
 span{
     font-size: 28px;
